[package]
name = "aligned_vec"
version = "0.1.0"
edition = "2021"
authors = ["Ugo Varetto"]
descrition = "Aligned and optionally page-locked vectors"
license = "MIT"
keywords = ["memory", "aligned", "page_locked"]
readme = "Readme.md"
repository = "https://github.com/uv-rust/aligned_vec"
homepage = "https://github.com/uv-rust/aligned_vec"
categories = ["memory-management"]

[dependencies]
page_size = "0.4"
nix = "0.24"
